--- a/Client.fedex/Gridlock/package.json
+++ b/Client.fedex/Gridlock/package.json
@@ -24,8 +24,10 @@
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "less": "^3.0.4",
     "lodash": "^4.17.10",
+    "primeng": "^6.0.0-alpha.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
