--- a/Client.fedex/Gridlock/package.json
+++ b/Client.fedex/Gridlock/package.json
@@ -24,7 +24,10 @@
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "ng2-signalr": "^6.0.0",
     "rxjs": "^6.0.0",
+    "signalr": "^2.2.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
