--- a/API.fedex/WebSocketOfDoom/WebSocketOfDoom/WebSocketOfDoom.csproj
+++ b/API.fedex/WebSocketOfDoom/WebSocketOfDoom/WebSocketOfDoom.csproj
@@ -1,12 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>SignalRGridLock</UserSecretsId>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.0-preview1-10009" />
   </ItemGroup>
 
 
