--- a/Client.fedex/Gridlock/angular.json
+++ b/Client.fedex/Gridlock/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.less",
               "./node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/primeng/resources/themes/omega/theme.css",
               "./node_modules/primeng/resources/primeng.min.css"
