--- a/Client.fedex/Gridlock/angular.json
+++ b/Client.fedex/Gridlock/angular.json
@@ -29,8 +29,8 @@
               "./node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/signalr/jquery.signalR.js"
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/signalr/jquery.signalR.js"
             ]
           },
           "configurations": {
