--- a/Client.fedex/Gridlock/package.json
+++ b/Client.fedex/Gridlock/package.json
@@ -32,6 +32,7 @@
     "ng2-signalr": "^6.0.0",
     "primeng": "^6.0.0-alpha.1",
     "rxjs": "^6.0.0",
+    "signalr": "^2.2.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
